# Alpha-Squeeze

./: .dockerignore  .env.example  .gitignore  AlphaSqueeze.sln  CLAUDE.md  Project Alpha Squeeze.txt  docker-compose.dev.yml  docker-compose.yml
.claude/: commands.json  ralph-loop.local.md  settings.json  verification-report.md
.claude/commands/: feature-cb-warning-light.md  master-development.md  phase1-data-layer.md  phase2-python-engine.md  phase3-dotnet-api.md  phase4-react-frontend.md  phase5-integration.md
.github/workflows/: ci.yml
database/: schema.sql  setup_db.sql
database/migrations/: 001_add_missing_columns.sql  001_add_system_config.sql  002_add_cb_tracking_tables.sql  003_add_discovery_tables.sql
docker/: Dockerfile.api  Dockerfile.python  Dockerfile.web  nginx.conf
proto/: squeeze.proto
python/: .env.example  pyproject.toml  requirements.txt
python/engine/: __init__.py  cb_calculator.py  config.py  database.py  server.py  squeeze_calculator.py
python/engine/protos/: __init__.py
python/scrapers/: __init__.py  base_scraper.py  cb_tpex_scraper.py  finmind_client.py  warrant_scraper.py  yahoo_finance_client.py
python/scripts/: __init__.py  generate_grpc.py
python/tests/: __init__.py  conftest.py  test_backfill.py  test_cb_calculator.py  test_cb_scraper.py  test_config_api.py  test_scrapers.py  test_squeeze_calculator.py  test_workers.py
python/tests/integration/: test_full_pipeline.py
python/workers/: __init__.py  backfill.py  cb_seed_data.py  daily_fetch.py  discovery_scanner.py  scheduler.py  startup_check.py  warrant_seed_data.py
src/AlphaSqueeze.Api/: AlphaSqueeze.Api.csproj  AlphaSqueeze.Api.http  Program.cs  (+1 more)
web/: .env.example  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
(+95 files in other folders)
